--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ if (!doNotTrack) {
 }
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7347993817468769"
+     crossorigin="anonymous"></script>
 
 <meta property="og:title" content="BashSupn" />
 <meta property="og:description" content="Text about my cool site" />
