--- a/blogs/index.html
+++ b/blogs/index.html
@@ -215,7 +215,7 @@ Blogs | BashSupn
     <h2 class="text-center pb-2">Blogs</h2>
     <div class="row">
         
-        <div class="col-lg-4 col-md-6 my-3">
+<!--         <div class="col-lg-4 col-md-6 my-3">
             <div class="card h-100">
                 <div class="card-body bg-transparent p-4 shadow-sm">
                     <a href="/blogs/remote-openwrt-dengan-port-forwarding/" class="primary-font card-title">
@@ -231,7 +231,7 @@ Kali ini saya akan membagikan cara remot openwrt dengan port forwarding. tanpa m
                     <a href="/blogs/remote-openwrt-dengan-port-forwarding/" class="float-end btn btn-outline-info btn-sm">Read</a>
                 </div>
             </div>
-        </div>
+        </div> -->
         
         <div class="row justify-content-center">
             <div class="col-auto m-3">
